bin/testsuite/tests/compiler/src/errors/compiler2.swg

#global testerror "Err0402";
	/* salut la foule
		/* */
